--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "mt_react",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://vanmarkic.github.io/mt_react",
     "dependencies": {
         "@svgr/webpack": "^5.5.0",
         "@testing-library/jest-dom": "^5.15.1",
