--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "deploy": "gh-pages -d build",
         "eject": "react-scripts eject",
         "start": "react-app-rewired start",
-        "build": "react-app-rewired build",
-        "test": "react-app-rewired test"
+        "test": "react-app-rewired test",
+        "build": "npm run build:react && npm run build:bundle",
+        "build:react": "react-scripts build",
+        "build:bundle": "webpack --config webpack.config.js"
     },
     "eslintConfig": {
         "extends": [
@@ -49,6 +51,9 @@
         ]
     },
     "devDependencies": {
-        "react-app-rewired": "^2.1.8"
+        "react-app-rewired": "^2.1.8",
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "url-loader": "^4.1.1",
+        "webpack-cli": "^4.9.1"
     }
 }
